force-app/main/default/objects/Grades_Report_Card__c/Grades_Report_Card__c.object-meta.xml
<CustomObject>
    <label>Grades/Report Card</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grades/Report Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>