force-app/main/default/objects/Grades_Report_Card__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Grades/Report Cards</relationshipLabel>
    <relationshipName>Grades_Report_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>