force-app/main/default/objects/Grades_Report_Card__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>