force-app/main/default/objects/Grades_Report_Card__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <length>18</length>
    <type>Text</type>
</CustomField>