force-app/main/default/objects/Grades_Report_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grade__c</columns>
    <columns>Remarks__c</columns>
    <columns>Student__c</columns>
    <columns>Term__c</columns>
    <columns>Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>